# Vyapar-RL

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  gst_rules.py  inference.py  models.py  openenv.yaml  problemstatement.md  pyproject.toml  test_ws.py  verify_exploit.py
data/: task1_easy.json  task2_medium.json  task3_hard.json
server/: app.py  environment.py  graders.py  requirements.txt
